# axum-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  data.db  deploy.sh
migrations/: 20250225005755_create_users.sql  20250321000121_create_users.sql
src/: auth.rs  lib.rs  main.rs  user.rs
src/handlers/: ping.rs
src/routes/: mod.rs
src/routes/api/: auth.rs  mod.rs
src/routes/api/auth/: google.rs
src/utils/: cookies.rs  jwt.rs  mod.rs
