[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
serde = "1.0.218"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["chrono", "sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }

