[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
oauth2 = {  version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["chrono", "sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }

